Convert to use SQL Server

--- a/src/Starbender.RecipeApp/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/Starbender.RecipeApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data/app.db;Cache=Shared"
+    "Default": "Server=localhost\\SQLEXPRESS;Database=RecipeDb;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
