--- a/src/Starbender.RecipeApp.Domain/Starbender.RecipeApp.Domain.csproj
+++ b/src/Starbender.RecipeApp.Domain/Starbender.RecipeApp.Domain.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Starbender.RecipeApp.Core\Starbender.RecipeApp.Core.csproj" />
     <ProjectReference Include="..\Starbender.RecipeApp.Doamin.Shared\Starbender.RecipeApp.Domain.Shared.csproj" />
   </ItemGroup>
 
