--- a/src/Starbender.RecipeApp.Services/Starbender.RecipeApp.Services.csproj
+++ b/src/Starbender.RecipeApp.Services/Starbender.RecipeApp.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Starbender.RecipeApp.Core\Starbender.RecipeApp.Core.csproj" />
+    <ProjectReference Include="..\Starbender.RecipeApp.EntityFrameworkCore\Starbender.RecipeApp.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Starbender.RecipeApp.Services.Contracts\Starbender.RecipeApp.Services.Contracts.csproj" />
   </ItemGroup>
 
