--- a/src/Starbender.RecipeApp/Starbender.RecipeApp.csproj
+++ b/src/Starbender.RecipeApp/Starbender.RecipeApp.csproj
@@ -16,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Starbender.RecipeApp.Core\Starbender.RecipeApp.Core.csproj" />
     <ProjectReference Include="..\Starbender.RecipeApp.EntityFrameworkCore\Starbender.RecipeApp.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Starbender.RecipeApp.Services.Contracts\Starbender.RecipeApp.Services.Contracts.csproj" />
+    <ProjectReference Include="..\Starbender.RecipeApp.Services\Starbender.RecipeApp.Services.csproj" />
   </ItemGroup>
 
 </Project>
