Add CrudAppService contracts
Basic CRUD services
Added DTOs
Added Automapper (free version)

--- a/src/Starbender.RecipeApp.Services.Contracts/Starbender.RecipeApp.Services.Contracts.csproj
+++ b/src/Starbender.RecipeApp.Services.Contracts/Starbender.RecipeApp.Services.Contracts.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Starbender.RecipeApp.Core\Starbender.RecipeApp.Core.csproj" />
     <ProjectReference Include="..\Starbender.RecipeApp.Doamin.Shared\Starbender.RecipeApp.Domain.Shared.csproj" />
   </ItemGroup>
