--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -8,5 +8,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RecipeApp": {
+    "ImageStoreType": "Filesystem",
+    "ContainerId": "Recipe-Images"
+  },
+  "BlobStorage": {
+    "Containers": [
+      {
+        "StoreType": "Filesystem",
+        "ContainerId": "Recipe-Images",
+        "Parameters": {
+          "RootPath": "C:/tmp/Recipe-Image-Store",
+          "ReadOnly": "false"
+        }
+      },
+      {
+        "StoreType": "Filesystem",
+        "ContainerId": "Generic-Images",
+        "Parameters": {
+          "RootPath": "C:/tmp/Generic-Image-Store",
+          "ReadOnly": "true"
+        }
+      }
+    ]
+  }
 }
