--- a/src/Starbender.RecipeApp.Core/Starbender.RecipeApp.Core.csproj
+++ b/src/Starbender.RecipeApp.Core/Starbender.RecipeApp.Core.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
+    <ProjectReference Include="..\Starbender.BlobStorage\Starbender.BlobStorage.csproj" />
+    <ProjectReference Include="..\Starbender.Core\Starbender.Core.csproj" />
   </ItemGroup>
 
 </Project>
