Added primitive UI

--- a/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
+++ b/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Starbender.RecipeApp.Services.Contracts\Starbender.RecipeApp.Services.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
