--- a/src/Starbender.RecipeApp.Services.Contracts/Starbender.RecipeApp.Services.Contracts.csproj
+++ b/src/Starbender.RecipeApp.Services.Contracts/Starbender.RecipeApp.Services.Contracts.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Starbender.RecipeApp.Doamin.Shared\Starbender.RecipeApp.Domain.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
