Enables saving image blob ID to recipe model
Adds functionality to update the recipe model with the image blob ID after uploading a new image. This change ensures that the correct image is associated with the recipe.

Also, binds RecipeAppOptions from configuration and validates on startup, and corrects a typo in the configuration key.

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "RecipeApp": {
     "ImageStoreType": "Filesystem",
-    "ContainerId": "Recipe-Images"
+    "ImageContainerId": "Recipe-Images"
   },
   "BlobStorage": {
     "Containers": [
