Improves recipe image handling and database context
Adds content type to blob metadata to improve image handling.

Updates recipe image retrieval logic to handle cases where a recipe may not exist when attempting to retrieve its image.

Sets the service lifetime to Transient and options lifetime to Scoped to prevent database context reuse issues.

Updates filesystem path for image store for cross-platform compatibility.

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -19,7 +19,7 @@
         "StoreType": "Filesystem",
         "ContainerId": "Recipe-Images",
         "Parameters": {
-          "RootPath": "C:/tmp/Recipe-Image-Store",
+          "RootPath": "/tmp/Recipe-Image-Store",
           "ReadOnly": "false"
         }
       },
@@ -27,7 +27,7 @@
         "StoreType": "Filesystem",
         "ContainerId": "Generic-Images",
         "Parameters": {
-          "RootPath": "C:/tmp/Generic-Image-Store",
+          "RootPath": "/tmp/Generic-Image-Store",
           "ReadOnly": "true"
         }
       }
