Prepares application for Azure deployment
Adds Dockerfile for containerization.
Configures Entra ID authentication for secure access, reading client secret from Azure Key Vault.
Enables database connection resilience and configurable timeouts.
Includes environment-specific configurations.

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=localhost\\SQLEXPRESS;Database=RecipeDb;Integrated Security=True;TrustServerCertificate=True;"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,9 +6,32 @@
     }
   },
   "AllowedHosts": "*",
+  "KeyVault": {
+    "Enabled": true,
+    "VaultUri": "https://recipes.vault.azure.net/"
+  },
   "RecipeApp": {
     "ImageStoreType": "Filesystem",
-    "ImageContainerId": "Recipe-Images"
+    "ImageContainerId": "Recipe-Images",
+    "EnableAuthentication": true
+  },
+  "Database": {
+    "SqlServer": {
+      "CommandTimeoutSeconds": 180,
+      "MaxRetryCount": 10,
+      "MaxRetryDelaySeconds": 30
+    }
+  },
+  "Authentication": {
+    "EntraId": {
+      "Enabled": true,
+      "TenantId": "d53fb6d0-679b-4d0c-a9a0-62d603f2c23f",
+      "Authority": "https://login.microsoftonline.com/d53fb6d0-679b-4d0c-a9a0-62d603f2c23f",
+      "ClientId": "f2765e9a-c977-4630-86fc-e6780e5e1515",
+      "ClientSecret": "",
+      "CallbackPath": "/signin-oidc",
+      "SignedOutCallbackPath": "/signout-callback-oidc"
+    }
   },
   "BlobStorage": {
     "Containers": [
@@ -21,14 +41,6 @@
         "Parameters": {
           "RootPath": "/tmp/Recipe-Image-Store",
           "ReadOnly": "false"
-        }
-      },
-      {
-        "StoreType": "Filesystem",
-        "ContainerId": "Generic-Images",
-        "Parameters": {
-          "RootPath": "/tmp/Generic-Image-Store",
-          "ReadOnly": "true"
         }
       }
     ]
