--- a/src/Starbender.RecipeApp/appsettings.Production.json
+++ b/src/Starbender.RecipeApp/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=tcp:starbender-dev.database.windows.net,1433;Database=recipe-dev;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;Authentication=Active Directory Default;",
+    "Default": "Server=tcp:starbender-dev.database.windows.net,1433;Database=recipe-dev;Encrypt=True;TrustServerCertificate=False;Connection Timeout=120;Authentication=Active Directory Managed Identity;"
   },
   "Database": {
     "SqlServer": {
@@ -9,6 +9,7 @@
       "MaxRetryDelaySeconds": 30
     }
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
