Refactors recipe display for better UI
- Introduces RecipeItem component to handle individual recipe rendering.
- Uses MudPaper and MudStack for improved layout and visual appeal.
- Implements recipe deletion directly from the item component.
- Adds RecipeTable for display of recipes
- Implements ability to collapse table
- Improves image component to handle loading states and empty states better

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -13,7 +13,8 @@
   "RecipeApp": {
     "ImageStoreType": "Filesystem",
     "ImageContainerId": "Recipe-Images",
-    "EnableAuthentication": true
+    "EnableAuthentication": true,
+    "EnableSeeding": false
   },
   "Database": {
     "SqlServer": {
