Adds Azure Blob Storage implementation
Implements Azure Blob Storage as a blob container provider.

Renames `FilesystemContainerProvider` to `BlobStorageProviderBase` and introduces abstract methods for provider-specific operations, promoting code reuse.

Adds a new `AzureBlobContainerProvider` class that handles interactions with Azure Blob Storage, including connecting, uploading, downloading and managing blobs.

Updates configuration to support Azure Blob Storage, adding validation for connection strings, service URIs, and container names.

Adds conditional logic to select between Filesystem and Azure Blob Storage at runtime

Removes the Dockerfile and .dockerignore files from the root of the project.

Updates gitignore to include json settings files for development

--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,9 @@ MigrationBackup/
 *.db-shm
 
 *.db-wal
+**/appsettings.Production.json
+**/appsettings.Development.json
+
+CON
+
+src/Starbender.RecipeApp/appsettings.DevDocker.json
