--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "KeyVault": {
-    "Enabled": true,
-    "VaultUri": "https://recipes.vault.azure.net/"
+    "Enabled": false,
+    "VaultUri": "https://<VAULT_NAME>.vault.azure.net/"
   },
   "RecipeApp": {
-    "ImageStoreType": "Filesystem",
-    "ImageContainerId": "Recipe-Images",
+    "ImageStoreType": "FileSystem",
+    "ImageContainerId": "AppBlob",
     "EnableAuthentication": true,
     "EnableSeeding": false
   },
@@ -25,10 +25,10 @@
   },
   "Authentication": {
     "EntraId": {
-      "Enabled": true,
-      "TenantId": "d53fb6d0-679b-4d0c-a9a0-62d603f2c23f",
-      "Authority": "https://login.microsoftonline.com/d53fb6d0-679b-4d0c-a9a0-62d603f2c23f",
-      "ClientId": "f2765e9a-c977-4630-86fc-e6780e5e1515",
+      "Enabled": false,
+      "TenantId": "<TENANT_ID>",
+      "Authority": "https://login.microsoftonline.com/<TENANT_ID>",
+      "ClientId": "<CLIENT_ID>",
       "ClientSecret": "",
       "CallbackPath": "/signin-oidc",
       "SignedOutCallbackPath": "/signout-callback-oidc"
@@ -38,9 +38,19 @@
     "Containers": [
       {
         "StoreType": "Filesystem",
-        "ContainerId": "Recipe-Images",
+        "ContainerId": "AppBlob",
         "Parameters": {
-          "RootPath": "/tmp/Recipe-Image-Store",
+          "RootPath": "/tmp/AppBlob",
+          "ReadOnly": "false"
+        }
+      },
+      {
+        "StoreType": "Azure",
+        "ContainerId": "AppBlob",
+        "Parameters": {
+          "ServiceUri": "https://<STORAGEACCT>.blob.core.windows.net",
+          "ContainerName": "<CONTAINER_NAME>",
+          "CreateIfNotExists": "false",
           "ReadOnly": "false"
         }
       }
