--- a/src/Starbender.BlobStorage/Starbender.BlobStorage.csproj
+++ b/src/Starbender.BlobStorage/Starbender.BlobStorage.csproj
@@ -6,13 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="14.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.2" />
-	</ItemGroup>
+		<ItemGroup>
+			<PackageReference Include="AutoMapper" Version="14.0.0" />
+			<PackageReference Include="Azure.Identity" Version="1.14.2" />
+			<PackageReference Include="Azure.Storage.Blobs" Version="12.25.1" />
+			<PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
+			<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+			<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.2" />
+			<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.2" />
+		</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Starbender.Core\Starbender.Core.csproj" />
