--- a/src/Starbender.RecipeApp/Starbender.RecipeApp.csproj
+++ b/src/Starbender.RecipeApp/Starbender.RecipeApp.csproj
@@ -6,9 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Starbender_RecipeApp-ff319913-25f4-4d67-8aa6-1a5a00b30367</UserSecretsId>
     <BlazorDisableThrowNavigationException>true</BlazorDisableThrowNavigationException>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
-  <ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+		<ContainerDevelopmentMode>Regular</ContainerDevelopmentMode>
+	</PropertyGroup>
+
+	<ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
     <PackageReference Include="Azure.Identity" Version="1.14.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.2" />
@@ -16,6 +21,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
   <ItemGroup>
