Refactors and improves recipe editing flow
Overhauls the recipe editing process to streamline updates and image handling.
This change refactors the RecipeEditor component into a dialog, enabling direct updates to the recipe list upon saving.
It also enhances image handling by resizing images on upload and refreshing the image display after updates.
Configuration of the blob storage is now dictionary based.
Removes unused DTOs and improves modularity.

Relates to #18

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ CON
 src/Starbender.RecipeApp/appsettings.DevDocker.json
 
 deploy.ps1
+/src/Starbender.RecipeApp/appsettings.Production.json
+/src/Starbender.RecipeApp/appsettings.DockerDev.json
+/src/Starbender.RecipeApp/appsettings.Production.json
