--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -6,22 +6,14 @@
     }
   },
   "AllowedHosts": "*",
+  "RecipeApp": {
+    "ImageContainerId": "RecipeImages",
+    "EnableAuthentication": false,
+    "EnableSeeding": false
+  },
   "KeyVault": {
     "Enabled": false,
     "VaultUri": "https://<VAULT_NAME>.vault.azure.net/"
-  },
-  "RecipeApp": {
-    "ImageStoreType": "FileSystem",
-    "ImageContainerId": "AppBlob",
-    "EnableAuthentication": true,
-    "EnableSeeding": false
-  },
-  "Database": {
-    "SqlServer": {
-      "CommandTimeoutSeconds": 180,
-      "MaxRetryCount": 10,
-      "MaxRetryDelaySeconds": 30
-    }
   },
   "Authentication": {
     "EntraId": {
@@ -34,26 +26,25 @@
       "SignedOutCallbackPath": "/signout-callback-oidc"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=RecipeDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+  },
   "BlobStorage": {
-    "Containers": [
-      {
+    "Containers": {
+      "RecipeImages": {
         "StoreType": "Filesystem",
-        "ContainerId": "AppBlob",
         "Parameters": {
-          "RootPath": "/tmp/AppBlob",
-          "ReadOnly": "false"
-        }
-      },
-      {
-        "StoreType": "Azure",
-        "ContainerId": "AppBlob",
-        "Parameters": {
-          "ServiceUri": "https://<STORAGEACCT>.blob.core.windows.net",
-          "ContainerName": "<CONTAINER_NAME>",
-          "CreateIfNotExists": "false",
+          "RootPath": "/var/opt/recipes/blob",
           "ReadOnly": "false"
         }
       }
-    ]
+    }
+  },
+  "Database": {
+    "SqlServer": {
+      "CommandTimeoutSeconds": 30,
+      "MaxRetryCount": 10,
+      "MaxRetryDelaySeconds": 30
+    }
   }
 }
