--- a/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
+++ b/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.2" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
   </ItemGroup>
 
   <ItemGroup>
