Updates recipe images to use blob storage
Refactors image handling to use blob storage for persistence.
This change streamlines image storage and retrieval, leveraging
the blob storage provider for improved efficiency and scalability.

The RecipeImage component is updated to bind directly to BlobContentDto,
allowing for simplified data flow and management. Image resizing
is now handled client-side before upload.

Also fixes an issue where image updates were failing.

--- a/src/Starbender.RecipeApp/Properties/launchSettings.json
+++ b/src/Starbender.RecipeApp/Properties/launchSettings.json
@@ -31,7 +31,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "DockerfileRunArguments": "--network appnet --network-alias recipeapp -v recipeapp-blob:/var/opt/recipes/blob",
+      "DockerfileRunArguments": "--network appnet --network-alias recipeapp -v C:/data/recipes:/data/recipes",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HTTP_PORTS": "8080",
