--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -34,7 +34,7 @@
       "RecipeImages": {
         "StoreType": "Filesystem",
         "Parameters": {
-          "RootPath": "/var/opt/recipes/blob",
+          "RootPath": "/data/recipes/blob",
           "ReadOnly": "false"
         }
       }
