Various deployment fixes
- Allow protection keys to be saved into a shared volume for production.
- Disable HttpsRedirection unless ports explicitly set
- Removed outdated scripts.

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -15,6 +15,11 @@
     "Enabled": false,
     "VaultUri": "https://<VAULT_NAME>.vault.azure.net/"
   },
+  "DataProtection": {
+    "PersistKeysToFileSystem": {
+      "Path": ""
+    }
+  },
   "Authentication": {
     "EntraId": {
       "Enabled": false,
