Simplifies container setup and data persistence
Streamlines the Docker configuration and improves data persistence by utilizing Azure file shares for recipe data.

This change simplifies the container setup by using a single volume mount for both recipe data and data protection keys.
It configures persistent data storage mapping using Azure file shares, ensuring data is available across container instances.
Additionally, enables KeyVault configuration.

--- a/src/Starbender.RecipeApp/Dockerfile
+++ b/src/Starbender.RecipeApp/Dockerfile
@@ -32,6 +32,10 @@ RUN dotnet publish "./Starbender.RecipeApp.csproj" -c $BUILD_CONFIGURATION -o /a
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
+RUN mkdir -p /app/data/recipes
+RUN chown -R $APP_UID /app/data/recipes
+RUN chmod -R 750 /app/data/recipes
+
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Starbender.RecipeApp.dll"]
