--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -17,13 +17,12 @@
   },
   "DataProtection": {
     "PersistKeysToFileSystem": {
-      "Path": ""
+      "Path": "/app/data/recipes/dpkeys"
     }
   },
   "Authentication": {
     "EntraId": {
       "Enabled": false,
-      "TenantId": "<TENANT_ID>",
       "Authority": "https://login.microsoftonline.com/<TENANT_ID>",
       "ClientId": "<CLIENT_ID>",
       "ClientSecret": "",
@@ -39,7 +38,7 @@
       "RecipeImages": {
         "StoreType": "Filesystem",
         "Parameters": {
-          "RootPath": "/data/recipes/blob",
+          "RootPath": "/app/data/recipes/blob",
           "ReadOnly": "false"
         }
       }
