Configures application for Azure deployment
Updates the application settings and workflow configuration for deployment to Azure.

- Sets the environment for the deployment job in the workflow file.
- Updates the connection string in appsettings.json to use environment variables or secrets
- Modifies KeyVault configuration in Program.cs to use a boolean to determine whether to use key vault
- Updates KeyVault URI in appsettings.json to the correct format

These changes prepare the application for deployment and allow for flexible configuration using KeyVault.

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -13,7 +13,7 @@
   },
   "KeyVault": {
     "Enabled": false,
-    "VaultUri": "https://<VAULT_NAME>.vault.azure.net/"
+    "VaultUri": "https://<VAULTNAME>.vault.azure.net/"
   },
   "DataProtection": {
     "PersistKeysToFileSystem": {
@@ -31,7 +31,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=RecipeDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+    "Default": "Server=localhost;Database=RecipeDb;User Id=recipeapp;Password=<PASSWORD>;TrustServerCertificate=True;"
   },
   "BlobStorage": {
     "Containers": {
