--- a/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
+++ b/src/Starbender.RecipeApp.Blazor/Starbender.RecipeApp.Blazor.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.2" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
