--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -16,6 +16,16 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_HTTP_PORTS: "8080"
       ConnectionStrings__Default: "Server=sqlserver;Database=RecipeDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+      # Bootstrap admin (optional)
+      Authorization__BootstrapUser__Enabled: "true"
+      Authorization__BootstrapUser__Email: "admin@recipeapp.starbendersystems.com"
+      Authorization__BootstrapUser__UserName: "admin@recipeapp.starbendersystems.com"
+      Authorization__BootstrapUser__Password: "Use-A-Real-Secret"
+      Authorization__BootstrapUser__AutoCreate: "true"
+      Authorization__BootstrapUser__Permissions__0: "ManageSecurity"
+      Authorization__BootstrapUser__Permissions__1: "ViewAnyRecipe"
+      Authorization__BootstrapUser__Permissions__2: "ModifyAnyRecipe"
+      Authorization__BootstrapUser__Permissions__3: "PublishOwnedRecipe"
     ports:
       - "32109:8080"
 
