Promote development to main (#32)
* Refactors and improves recipe editing flow (#21)

Overhauls the recipe editing process to streamline updates and image handling.
This change refactors the RecipeEditor component into a dialog, enabling direct updates to the recipe list upon saving.
It also enhances image handling by resizing images on upload and refreshing the image display after updates.
Configuration of the blob storage is now dictionary based.
Removes unused DTOs and improves modularity.

Relates to #18

* Remove HasIngredients check (#22)

* Updates recipe images to use blob storage (#24)

Refactors image handling to use blob storage for persistence.
This change streamlines image storage and retrieval, leveraging
the blob storage provider for improved efficiency and scalability.

The RecipeImage component is updated to bind directly to BlobContentDto,
allowing for simplified data flow and management. Image resizing
is now handled client-side before upload.

Also fixes an issue where image updates were failing.

* Create an auto-deploy file

* Unlink the containerApp recipeapp from this repo

* Create an auto-deploy file

* Update deployment

* Use acrName instead of registryUrl

* Corrected build directory and Dockerfile path

* Various deployment fixes

- Allow protection keys to be saved into a shared volume for production.
- Disable HttpsRedirection unless ports explicitly set
- Removed outdated scripts.

* docker fixes

* Mount data protection volume

* Simplifies container setup and data persistence

Streamlines the Docker configuration and improves data persistence by utilizing Azure file shares for recipe data.

This change simplifies the container setup by using a single volume mount for both recipe data and data protection keys.
It configures persistent data storage mapping using Azure file shares, ensuring data is available across container instances.
Additionally, enables KeyVault configuration.

* Configures application for Azure deployment

Update

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -6,27 +6,23 @@
     }
   },
   "AllowedHosts": "*",
-  "KeyVault": {
-    "Enabled": false,
-    "VaultUri": "https://<VAULT_NAME>.vault.azure.net/"
-  },
   "RecipeApp": {
-    "ImageStoreType": "FileSystem",
-    "ImageContainerId": "AppBlob",
-    "EnableAuthentication": true,
+    "ImageContainerId": "RecipeImages",
+    "EnableAuthentication": false,
     "EnableSeeding": false
   },
-  "Database": {
-    "SqlServer": {
-      "CommandTimeoutSeconds": 180,
-      "MaxRetryCount": 10,
-      "MaxRetryDelaySeconds": 30
+  "KeyVault": {
+    "Enabled": false,
+    "VaultUri": "https://<VAULTNAME>.vault.azure.net/"
+  },
+  "DataProtection": {
+    "PersistKeysToFileSystem": {
+      "Path": "/app/data/recipes/dpkeys"
     }
   },
   "Authentication": {
     "EntraId": {
       "Enabled": false,
-      "TenantId": "<TENANT_ID>",
       "Authority": "https://login.microsoftonline.com/<TENANT_ID>",
       "ClientId": "<CLIENT_ID>",
       "ClientSecret": "",
@@ -34,26 +30,25 @@
       "SignedOutCallbackPath": "/signout-callback-oidc"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=RecipeDb;User Id=recipeapp;Password=<PASSWORD>;TrustServerCertificate=True;"
+  },
   "BlobStorage": {
-    "Containers": [
-      {
+    "Containers": {
+      "RecipeImages": {
         "StoreType": "Filesystem",
-        "ContainerId": "AppBlob",
         "Parameters": {
-          "RootPath": "/tmp/AppBlob",
-          "ReadOnly": "false"
-        }
-      },
-      {
-        "StoreType": "Azure",
-        "ContainerId": "AppBlob",
-        "Parameters": {
-          "ServiceUri": "https://<STORAGEACCT>.blob.core.windows.net",
-          "ContainerName": "<CONTAINER_NAME>",
-          "CreateIfNotExists": "false",
+          "RootPath": "/app/data/recipes/blob",
           "ReadOnly": "false"
         }
       }
-    ]
+    }
+  },
+  "Database": {
+    "SqlServer": {
+      "CommandTimeoutSeconds": 30,
+      "MaxRetryCount": 10,
+      "MaxRetryDelaySeconds": 30
+    }
   }
 }
