--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ CON
 src/Starbender.RecipeApp/appsettings.DevDocker.json
 
 deploy.ps1
+/src/Starbender.RecipeApp/appsettings.Production.json
+/src/Starbender.RecipeApp/appsettings.DockerDev.json
+/src/Starbender.RecipeApp/appsettings.Production.json
+
+.vscode/settings.json
