--- a/src/Starbender.RecipeApp/Properties/launchSettings.json
+++ b/src/Starbender.RecipeApp/Properties/launchSettings.json
@@ -18,16 +18,28 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7289;http://localhost:5247"
     },
-    "Container (Dockerfile)": {
+    "https Prod": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7289;http://localhost:5247"
+    },
+    "Dockerfile": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "DockerfileRunArguments": "--network appnet --network-alias recipeapp -v C:/app/data/recipes:/app/data/recipes",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ConnectionStrings__Default": "Server=sqlserver;Database=RecipeDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;",
+        "KeyVault__Enabled": "false"
       },
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": false
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
