Conditionally shows authentication options
Improves the login page by conditionally rendering the
passkey and external login options based on configuration settings.
This allows for more flexibility in authentication methods.

Fixes #33

--- a/src/Starbender.RecipeApp/appsettings.json
+++ b/src/Starbender.RecipeApp/appsettings.json
@@ -21,6 +21,9 @@
     }
   },
   "Authentication": {
+    "Passkey": {
+      "Enabled":  false
+    },
     "EntraId": {
       "Enabled": false,
       "Authority": "https://login.microsoftonline.com/<TENANT_ID>",
